# ogion

./: .dockerignore  .env.example  .env.stress_test  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  backuper.py  docker-compose.gh.yml  docker-compose.tests.yml  docker-compose.yml  docker-entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release.yml
.github/workflows/: dev_build.yml  dev_image_build.yml  gh_pages_docs.yml  manual_trigger_image_build.yml  mem_stress_test.yml  release_build.yml  stress_test.yml  tests.yml  trigger_image_build.yml  type_check.yml  update_compose_dbs.yml
3.0/: index.html
3.0/configuration/: index.html
3.0/deployment/: index.html
3.0/how_to_restore/: index.html
3.0/search/: search_index.json
3.1/: 404.html
3.1/configuration/: index.html
3.1/search/: search_index.json
3.2/: 404.html  index.html
3.2/configuration/: index.html
3.2/deployment/: index.html
3.2/how_to_restore/: index.html
3.2/search/: search_index.json
4.0/: 404.html  index.html
4.0/configuration/: index.html
4.0/deployment/: index.html
4.0/how_to_restore/: index.html
4.0/search/: search_index.json
5.0/: 404.html  index.html
5.0/configuration/: index.html
5.0/deployment/: index.html
5.0/how_to_restore/: index.html
5.0/search/: search_index.json
5.1/: 404.html  index.html
5.1/configuration/: index.html
5.1/deployment/: index.html
5.1/how_to_restore/: index.html
5.1/search/: search_index.json
6.0/: 404.html  index.html
6.0/configuration/: index.html
6.0/deployment/: index.html
6.0/how_to_restore/: index.html
6.0/search/: search_index.json
7.0/: 404.html  index.html
7.0/manual_disaster_recovery/: index.html
7.0/search/: search_index.json
7.1/: index.html
7.1/configuration/: index.html
7.1/deployment/: index.html
7.1/disaster_recovery/: index.html
7.1/search/: search_index.json
7.2/: 404.html  index.html
7.2/configuration/: index.html
7.2/deployment/: index.html
7.2/disaster_recovery/: index.html
7.2/manual_disaster_recovery/: index.html
7.2/search/: search_index.json
7.3/: index.html
7.3/configuration/: index.html
7.3/deployment/: index.html
7.3/manual_disaster_recovery/: index.html
8.0/: 404.html  index.html
8.0/configuration/: index.html
8.0/disaster_recovery/: index.html
8.1/: 404.html  index.html
8.1/configuration/: index.html
8.1/deployment/: index.html
8.1/disaster_recovery/: index.html
8.1/manual_disaster_recovery/: index.html
8.2/: 404.html  index.html  objects.inv
8.2/configuration/: index.html
8.2/deployment/: index.html
8.2/disaster_recovery/: index.html
8.2/manual_disaster_recovery/: index.html
8.2/search/: search_index.json
8.3/: 404.html  index.html
8.3/changelog/: index.html
8.3/cli/: index.html
8.3/configuration/: index.html
8.3/deployment/: index.html
8.3/recovery/: index.html
8.3/search/: search_index.json
8.4/: 404.html  index.html
8.4/changelog/: index.html
8.4/cli/: index.html
8.4/configuration/: index.html
8.4/deployment/: index.html
8.4/recovery/: index.html
8.4/search/: search_index.json
backuper/: config.py  core.py  main.py  notifications.py
backuper/backup_targets/: __init__.py  base_target.py  file.py  folder.py  mariadb.py  mysql.py  postgresql.py  targets_mapping.py
backuper/models/: backup_target_models.py  models_mapping.py  provider_models.py  target_models.py  upload_provider_models.py
backuper/notifications/: base_notification_system.py  discord.py  notifications_context.py  slack.py  smtp.py
backuper/providers/: __init__.py  base_provider.py  google_cloud_storage.py  local.py
backuper/storage_providers/: __init__.py  base_provider.py  google_cloud_storage.py  local.py
backuper/tools/: compose_db_models.py  compose_file_generator.py  endoflife_api.py
backuper/upload_providers/: __init__.py  aws_s3.py  azure.py  base_provider.py  debug.py  google_cloud_storage.py  providers_mapping.py
docker/: Dockerfile  docker-compose.acceptance.yml  docker-compose.dbs.yml  docker-compose.tests.yml  docker-compose.yml
docs/: .env.demo  cli.md  configuration.md  deployment.md  design_history_future.md  disaster_recovery.md  docker-compose.demo.yml  how_to_restore.md  index.md  manual_disaster_recovery.md  recovery.md
docs/backup_targets/: directory.md  file.md  google_cloud_storage.md  mariadb.md  mysql.md  postgresql.md
docs/notifications/: discord.md  slack.md  smtp.md
docs/other/: development.md  history.md
docs/providers/: aws_s3.md  azure.md  debug.md  google_cloud_storage.md  s3.md
latest/configuration/: index.html
latest/deployment/: index.html
latest/how_to_restore/: index.html
ogion/: config.py  core.py  main.py
ogion/backup_targets/: base_target.py  file.py  folder.py  mariadb.py  (+3 more)
pg_dump/: cleanup_thread.py  config.py  core.py  jobs.py  main.py  pg_dump_thread.py  pgdump_thread.py  scheduler_thread.py  upload_thread.py
scripts/: docker_entrypoint.sh  download_7zip.sh  gh_update_dbs_commit.sh  gh_update_dbs_pr.sh  gh_update_dbs_with_pr.sh  install_apt_libs_and_7zip.sh  install_mariadb_client.sh  install_mariadb_mysql_client.sh  install_pg_client_and_7zip.sh  install_postgresql_client.sh  license_check.py  mem_stress_test.sh  stress_test.sh
tests/: __init__.py  conftest.py  test_backup_target_file.py  test_backup_target_folder.py  test_backup_target_mariadb.py  test_backup_target_mysql.py  test_backup_target_postgresql.py  test_base_backup_target.py  test_config.py  test_core.py  test_main.py  test_main_commands.py  test_mappings.py  test_models.py  test_notifications.py  test_notifications_context.py  test_notifications_discord.py  test_notifications_slack.py  test_notifications_smtp.py  test_storage_provider_aws.py  test_storage_provider_azure.py  test_storage_provider_gcs.py  test_storage_provider_local.py  test_storage_providers.py
(+211 files in other folders)
