[tool.poetry]
authors = ["Rafał Safin <rafal.safin@rafsaf.pl>"]
description = "A tool for performing scheduled database backups and transferring encrypted data to secure clouds, for home labs, hobby projects, etc., in environments such as k8s, docker, vms."
license = "GNU GPLv3"
name = "ogion"
package-mode = false
version = "6.1"

[tool.poetry.dependencies]
python = "^3.13"

azure-identity = "^1.17.1"
azure-storage-blob = "^12.20.0"
croniter = "^3.0.3"
google-cloud-storage = "^2.18.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
minio = "^7.2.9"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"
markdown-include = "^0.8.1"
mike = "^2.1.3"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings = { extras = ["python"], version = "^0.26.1" }
mypy = "^1.11.2"
pre-commit = "^3.8.0"
pymdown-extensions = "^10.9"
pyyaml = "^6.0.2"
requests = "^2.32.3"
ruff = "^0.6.4"
types-croniter = "^3.0.3.20240731"
types-google-cloud-ndb = "^2.3.0.20240813"
types-pyyaml = "^6.0.12.20240808"
types-requests = "^2.32.0.20240907"

[tool.poetry.group.tests.dependencies]
freezegun = "^1.5.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.4"
pytest-xdist = "^3.6.1"
python-dotenv = "^1.0.1"
responses = "^0.25.0"

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing --cov-fail-under 90 -n auto"
env = [
  "AGE_RECIPIENTS=",
  "BACKUP_MAX_NUMBER=1",
  "BACKUP_PROVIDER=",
  "FAKE_GCS_PORT=4443",
  "LOG_FOLDER_PATH=/tmp/pytest_ogion_env_vars_hook_logs_folder",
  "STORAGE_EMULATOR_HOST=http://localhost:4443",
  "SUBPROCESS_TIMEOUT_SECS=5",
]
filterwarnings = [
  "ignore:Type google._upb._message.MessageMapContainer uses PyType_Spec",
  "ignore:Type google._upb._message.ScalarMapContainer uses PyType_Spec",
]

[tool.pyright]
reportImplicitOverride = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
select = ["E", "F", "I", "PL", "UP", "W"]

[tool.coverage.run]
omit = ["ogion/tools/*"]
source = ["ogion"]

[tool.mypy]
enable_error_code = "explicit-override"
ignore_missing_imports = true
python_version = "3.13"
strict = true

[tool.poetry.scripts]
ogion = "ogion.main:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
