[project]
name = "ogion"
version = "8.3"
description = "A tool for performing scheduled database backups and transferring encrypted data to secure clouds, for home labs, hobby projects, etc., in environments such as k8s, docker, vms."
authors = [{ name = "Rafał Safin", email = "rafal.safin@rafsaf.pl" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
license = "GNU GPLv3"
dependencies = [
  "argcomplete>=3.6.3",
  "azure-identity>=1.17.1",
  "azure-storage-blob>=12.20.0",
  "croniter>=6.0.0",
  "google-cloud-storage>=2.18.2",
  "minio>=7.2.13",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.7.1",
  "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
  "coverage>=7.6.10",
  "markdown-include>=0.8.1",
  "mike>=2.1.3",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.49",
  "mkdocstrings[python]>=0.27.0",
  "mypy>=1.18.2",
  "pre-commit>=4.0.1",
  "pymdown-extensions>=10.13",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "ruff>=0.14.3",
  "types-croniter>=5.0.1.20241205",
  "types-google-cloud-ndb>=2.3.0.20240813",
  "types-pyyaml>=6.0.12.20241230",
  "types-requests>=2.32.0.20240907",
  "psutil>=7.1.0",
]
tests = [
  "freezegun>=1.5.1",
  "psutil>=7.1.2",
  "pytest>=8.3.2",
  "pytest-cov>=6.0.0",
  "pytest-env>=1.1.4",
  "pytest-xdist>=3.6.1",
  "python-dotenv>=1.0.1",
  "responses>=0.25.0",
]

[tool.uv]
package = false
default-groups = ["dev", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing --cov-fail-under 100 -n auto"
env = [
  "AGE_RECIPIENTS=",
  "BACKUP_MAX_NUMBER=1",
  "BACKUP_PROVIDER=",
  "FAKE_GCS_PORT=4443",
  "LOG_FOLDER_PATH=/tmp/pytest_ogion_env_vars_hook_logs_folder",
  "LOG_LEVEL=DEBUG",
  "STORAGE_EMULATOR_HOST=http://localhost:4443",
  "SUBPROCESS_TIMEOUT_SECS=5",
]
filterwarnings = []

[tool.pyright]
reportImplicitOverride = true

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["PLR0913"]
select = ["E", "F", "I", "PL", "UP", "W"]

[tool.coverage.run]
omit = ["ogion/tools/*"]
source = ["ogion"]

[tool.mypy]
enable_error_code = "explicit-override"
ignore_missing_imports = true
python_version = "3.14"
strict = true
